cmake_minimum_required(VERSION 2.8)
project(OpenCV CXX)
set(CMAKE_CXX_FLAGS "-std=c++11 -O2 -Wall")

find_package(PkgConfig)
pkg_check_modules(RealSense2 REQUIRED realsense2)
pkg_check_modules(OpenCV REQUIRED opencv)
include_directories(${RealSense2_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
link_directories(${RealSense2_LIBRARY_DIRS} ${OpenCV_LIBRARY_DIRS})

add_executable(rs-imshow rs-imshow.cpp)
target_link_libraries(rs-imshow ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv1 cv1.cpp)
target_link_libraries(cv1 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv2 cv2.cpp)
target_link_libraries(cv2 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv3 cv3.cpp)
target_link_libraries(cv3 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv4 cv4.cpp)
target_link_libraries(cv4 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv5 cv5.cpp)
target_link_libraries(cv5 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv6 cv6.cpp)
target_link_libraries(cv6 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv7 cv7.cpp)
target_link_libraries(cv7 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv10 cv10.cpp)
target_link_libraries(cv10 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv11 cv11.cpp)
target_link_libraries(cv11 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv12 cv12.cpp)
target_link_libraries(cv12 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv13 cv13.cpp)
target_link_libraries(cv13 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv14 cv14.cpp)
target_link_libraries(cv14 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv15 cv15.cpp)
target_link_libraries(cv15 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv16 cv16.cpp)
target_link_libraries(cv16 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv17 cv17.cpp)
target_link_libraries(cv17 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv18 cv18.cpp)
target_link_libraries(cv18 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv19 cv19.cpp)
target_link_libraries(cv19 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv20 cv20.cpp)
target_link_libraries(cv20 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv21 cv21.cpp)
target_link_libraries(cv21 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv22 cv22.cpp)
target_link_libraries(cv22 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
