cmake_minimum_required(VERSION 3.10)
project(OpenCV CXX)
set(CMAKE_CXX_FLAGS "-std=c++14 -O2 -Wall")

find_package(PkgConfig)
#pkg_check_modules(RealSense2 REQUIRED realsense2)
#pkg_check_modules(OpenCV opencv REQUIRED)
pkg_check_modules(OpenCV REQUIRED opencv)
include_directories(${RealSense2_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
link_directories(${RealSense2_LIBRARY_DIRS} ${OpenCV_LIBRARY_DIRS})

#add_executable(rs-imshow rs-imshow.cpp)
#target_link_libraries(rs-imshow ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv1 cv1.cpp)
target_link_libraries(cv1 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv2 cv2.cpp)
#target_link_libraries(cv2 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv3 cv3.cpp)
#target_link_libraries(cv3 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv4 cv4.cpp)
#target_link_libraries(cv4 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv5 cv5.cpp)
#target_link_libraries(cv5 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv6 cv6.cpp)
target_link_libraries(cv6 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv7 cv7.cpp)
target_link_libraries(cv7 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv7a cv7a.cpp)
target_link_libraries(cv7a ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv10 cv10.cpp)
#target_link_libraries(cv10 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv11 cv11.cpp)#
#target_link_libraries(cv11 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv12 cv12.cpp)
#target_link_libraries(cv12 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv13 cv13.cpp)
#target_link_libraries(cv13 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv14 cv14.cpp)
#target_link_libraries(cv14 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv15 cv15.cpp)
#target_link_libraries(cv15 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv16 cv16.cpp)
#target_link_libraries(cv16 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv17 cv17.cpp)
#target_link_libraries(cv17 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv18 cv18.cpp)
#target_link_libraries(cv18 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv19 cv19.cpp)
#target_link_libraries(cv19 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv20 cv20.cpp)
#target_link_libraries(cv20 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
add_executable(cv21 cv21.cpp)
target_link_libraries(cv21 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv22 cv22.cpp)
#target_link_libraries(cv22 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv23 cv23.cpp)
#target_link_libraries(cv23 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv24 cv24.cpp)
#target_link_libraries(cv24 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv25 cv25.cpp)
#target_link_libraries(cv25 ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(detectFace detectFace.cpp)
#target_link_libraries(detectFace ${RealSense2_LIBRARIES} ${OpenCV_LIBRARIES})
#add_executable(cv26 cv26.cpp)
#target_link_libraries(cv26 ${OpenCV_LIBRARIES})
#add_executable(cv27 cv27.cpp)
#target_link_libraries(cv27 ${OpenCV_LIBRARIES})
#add_executable(cv28 cv28.cpp)
#target_link_libraries(cv28 ${OpenCV_LIBRARIES})
add_executable(cv30 cv30.cpp)
target_link_libraries(cv30 ${OpenCV_LIBRARIES})
add_executable(cv31 cv31.cpp)
target_link_libraries(cv31 ${OpenCV_LIBRARIES})

#add_executable(sample sample.cpp)
#target_link_libraries(sample ${OpenCV_LIBRARIES})
add_executable(CreateAR CreateAR.cpp)
target_link_libraries(CreateAR ${OpenCV_LIBRARIES})
#add_executable(DetectAR DetectAR.cpp)
#target_link_libraries(DetectAR ${OpenCV_LIBRARIES})
#add_executable(camDetect camDetect.cpp)
#target_link_libraries(camDetect ${OpenCV_LIBRARIES})
